<resources>
    <string name="app_name">Drink N Dial</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="home_fav_dialog">Select one of your favorite locations!</string>
    <string name="homeLocation">Home</string>
    <string name="favLocation">Favorite Location</string>

    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="logout_yes_button">Yes</string>
    <string name="logout_no_button">Cancel</string>
    <string name="logout_button">Log Out</string>

    <!-- DrinknDial strings (common)-->
    <string name="logoDesc">Logo</string>
    <string name="pressDesc">Press</string>
    <string name="userPicture">User picture</string>
    <string name="title">Drink n Dial</string>
    <string name="cancel">cancel</string>
    <string name="email">Email</string>
    <string name="pw">PW</string>
    <string name="phone">Phone</string>
    <string name="hint_email">email@email.com</string>
    <string name="hint_pw">Password</string>
    <string name="hint_pwConfirm">Confirm Password</string>
    <string name="hint_phone">Numbers only</string>
    <string name="Save">Save</string>

    <!-- Log In -->
    <string name="username_hint">Enter username</string>
    <string name="password_hint">Enter password</string>

    <!-- Register -->
    <string name="register_title">Register</string>
    <string name="register_name">Name</string>
    <string name="register_hint_firstName">First Name</string>
    <string name="register_hint_lastName">Last Name</string>
    <string name="register">Register</string>


    <!-- Setting -->
    <string name="setting_title">Setting</string>
    <string name="setting_favorit_title">Favorites</string>
    <string name="setting_preference_title">Preference</string>
    <string name="setting_add_home">Add Home</string>
    <string name="setting_add_location">Add Favorite Location</string>
    <string name="setting_home">Home</string>
    <string name="setting_favorite">Favorite</string>
    <string name="setting_find_driver">Find drivers within</string>
    <string name="setting_miles">miles</string>
    <string name="setting_hint_miles">ex)0.5</string>
    <string name="setting_picture">Change picture</string>
    <string name="setting_mile_save">Save</string>
    <string name="setting_prefer_button">Edit</string>

    <string name="location_title">Add Location</string>
    <string name="location_name">Name</string>
    <string name="location_street">Street</string>
    <string name="location_city">City</string>
    <string name="location_state">State</string>
    <string name="location_zip">Zipcode</string>
    <string name="location_hint_name">Location Name</string>
    <string name="location_hint_Street">ex) 123 main st.</string>
    <string name="location_hint_City">city</string>
    <string name="location_hint_State">ex) WA</string>
    <string name="location_hint_zip">ex) 11111</string>

    <string name="driver_title">Available Drivers</string>

    <string name="trip_title">Recent Trips</string>
    <string name="trip_from">FROM</string>
    <string name="trip_to">TO</string>


    <!--Navigation Drawer Specific Strings-->
    <string name="nav_settings">Settings</string>
    <string name="nav_trips">Recent Trips</string>

    <string name="LOGIN_PREFS">edu.uw.tacoma.team8.drinkndial.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>

    <string name="SETTINGS_PREFS">edu.uw.tacoma.team8.drinkndial.SETTINGSPREFS</string>

    <string name="TRIP_INFO_PREFS">edu.uw.tacoma.team8.drinkndial.TRIPPREFS</string>
    <string name="username">Jieun Lee</string>
    <string name="userphone">Jieun Lee</string>
    <string name="useremail">email@email.com</string>
    <string name="title_activity_testing">Map</string>


    <string name="LOGIN_FILE"> edu.uw.tacoma.team8.drinkndial.LOGIN_FILE</string>


    <!-- Facebook Login-->
    <string name="facebook_app_id">775665282584719</string>

    <!-- Google Login -->
    <string name="loading">loading</string>
    <string name="signed_out">signed_out</string>
    <string name="signed_in_fmt">LoginTest</string>


    <!-- For DB -->
    <string name="CREATE_DND_USER_SQL">
        CREATE TABLE IF NOT EXISTS dnd_user
        (email TEXT PRIMARY KEY, fname TEXT, lname TEXT, pw TEXT, phone TEXT)
    </string>

    <string name="DROP_DND_USER_SQL">
        DROP TABLE IF EXISTS dnd_user
    </string>

    <string name="CREATE_DND_TRIP_SQL">
        CREATE TABLE IF NOT EXISTS dnd_trip
        (tripid INTEGER PRIMARY KEY, distance REAL, paid REAL, startAddress TEXT, endAddress TEXT, email TEXT)
    </string>

    <string name="DROP_DND_TRIP_SQL">
        DROP TABLE IF EXSITS dnd_trip
    </string>


</resources>
