<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="15dp">

        <TextView
            style="@style/TitleTextStyle"
            android:text="@string/setting_title"/>

        <TextView
            style="@style/SubTitleTextStyle"
            android:text="@string/setting_add_home"
            android:layout_marginTop="15dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                style="@style/SettingItemTextStyle"
                android:text="@string/location_street"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_hint_Street"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                style="@style/SettingItemTextStyle"
                android:text="@string/location_city"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_hint_City"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                style="@style/SettingItemTextStyle"
                android:text="@string/location_state"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_hint_State"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                style="@style/SettingItemTextStyle"
                android:text="@string/location_zip"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location_hint_zip"/>
        </LinearLayout>



        <Button
            style="@style/SaveButtonStyle"
            android:id="@+id/setting_home_save_button"
            android:layout_marginTop="15dp"
            android:text="@string/Save"/>

</LinearLayout>
