<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/register_logo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_small"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="15dp"
            android:text="@string/title"
            android:textColor="@color/drinkDarkBlue"
            android:textSize="40dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <!-- name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/register_name"
            android:textColor="@color/drinkDarkBlue"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginright="15dp"
                android:text="@string/register_hint_firstName"
                android:textColor="@color/drinkLightGray"
                android:textSize="16dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginright="15dp"
                android:text="@string/register_hint_lastName"
                android:textColor="@color/drinkLightGray"
                android:textSize="16dp"/>
        </LinearLayout>

    </LinearLayout>


    <!-- email -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/email"
            android:textColor="@color/drinkDarkBlue"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginright="15dp"
            android:text="@string/hint_email"
            android:textColor="@color/drinkLightGray"
            android:textSize="16dp"/>
    </LinearLayout>

    <!-- pw -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/pw"
            android:textColor="@color/drinkDarkBlue"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginright="15dp"
                android:text="@string/hint_pw"
                android:textColor="@color/drinkLightGray"
                android:textSize="16dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginright="15dp"
                android:text="@string/hint_pwConfirm"
                android:textColor="@color/drinkLightGray"
                android:textSize="16dp"/>
        </LinearLayout>
    </LinearLayout>


    <!-- phone -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/phone"
            android:textColor="@color/drinkDarkBlue"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginright="15dp"
            android:text="@string/hint_phone"
            android:textColor="@color/drinkLightGray"
            android:textSize="16dp"/>
    </LinearLayout>


    <!-- Register button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@color/drinkDarkBlue"
            android:textColor="@color/drinkWhite"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:onClick="doRegister"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/drinkDarkGray"
            android:background="@color/drinkWhite"
            android:onClick="doCancel"/>
    </LinearLayout>

</LinearLayout>
