<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/update_preference_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.uw.tacoma.team8.drinkndial.navigation.UpdatePreferenceActivity">

    <TextView
        style="@style/TitleTextStyle"
        android:text="@string/setting_preference_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="30dp">


        <EditText
            android:id="@+id/preference_miles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/setting_hint_miles" />

        <Button
            android:id="@+id/save_miles_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/drinkDarkBlue"
            android:textColor="@color/drinkWhite"
            android:text="@string/setting_mile_save"/>

    </LinearLayout>

</LinearLayout>